# infotecs_test

./: CMakeLists.txt  README.md
src/: program1.cpp  programm2.cpp
